src/test/deca/syntax/valid/homemade/lexer/test/test_lex_val_if.deca
// Description:
//    Programme minimaliste testant le if.
//
// Resultats:
//    le if marche
//
// Historique:
//    cree le 01/01/2023

{
        if (5 > 3){
                println("le if marche")
        }
}