src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_instruction_primary_select_expr_oubli_virgule.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le select_expr
//
// Resultats:
//    Ligne 12 : Erreur oubli ","
//    
//
// Historique:
//    cree le 04/01/2023

{
    iden.iden1 (iden iden);
}
